test-legacy/tests/compiler/from_to/from_failure_extension.txt
error: no known format for extension `.extension`
 --> tests/compiler/from_to/from_failure_extension.tql:5:14
  |
5 | from "failure.extension"
  |              ^^^^^^^^^^ 
  |
  = note: supported extensions for format deduction: `arrow`, `cef`, `csv`, `feather`, `json`, `jsonl`, `jsonld`, `leef`, `ndjson`, `parquet`, `pcap`, `ssv`, `tsv`, `yaml`, `zeek`
  = note: supported extensions for compression deduction: `br`, `brotli`, `bz2`, `gz`, `gzip`, `lz4`, `zst`, `zstd`
  = hint: you can pass a pipeline to handle compression and format
  = docs: https://docs.tenzir.com/reference/operators/from
